# iscc-lib

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Package.swift  README.md  clippy.toml  mise.toml  pyproject.toml  zensical.toml
.claude/agent-memory/advance/: MEMORY-archive.md  MEMORY.md
.claude/agent-memory/define-next/: MEMORY-archive.md  MEMORY.md
.claude/agent-memory/review/: MEMORY.md  review-patterns.md
.claude/agent-memory/update-state/: MEMORY-archive.md  MEMORY.md
.claude/agents/: advance.md  define-next.md  orchestrator.md  review.md  update-state.md
.claude/context/: README.md  handoff.md  issues.md  iterations.jsonl  learnings-archive.md  learnings.md  next.md  state.md  target.md
.claude/context/specs/: c-ffi-dx.md  ci-cd.md  cpp-bindings.md  documentation.md  dotnet-bindings.md  go-bindings.md  java-bindings.md  kotlin-bindings.md  nodejs-bindings.md  python-bindings.md  ruby-bindings.md  rust-core.md  swift-bindings.md  wasm-bindings.md
.claude/skills/docs-for-agents/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/zensical-customizer/: SKILL.md
.claude/skills/zensical-customizer/references/: javascript.md
.devcontainer/: Dockerfile  devcontainer.json  run-agent.sh
.github/workflows/: ci.yml  docs.yml  release.yml
benchmarks/python/: bench_iscc_core.py  bench_iscc_lib.py  conftest.py
crates/iscc-ffi/: CLAUDE.md  Cargo.toml  README.md  build.rs  cbindgen.toml
crates/iscc-ffi/examples/: CMakeLists.txt  iscc_sum.c
crates/iscc-ffi/include/: iscc.h
crates/iscc-ffi/src/: lib.rs
crates/iscc-ffi/tests/: test_iscc.c
crates/iscc-jni/: CLAUDE.md  Cargo.toml  README.md
crates/iscc-jni/java/: pom.xml
crates/iscc-jni/java/src/main/java/io/iscc/iscc_lib/: IsccDecodeResult.java  IsccLib.java  NativeLoader.java  SumCodeResult.java
crates/iscc-jni/java/src/test/java/io/iscc/iscc_lib/: IsccLibTest.java
crates/iscc-jni/src/: lib.rs
crates/iscc-lib/: CLAUDE.md  Cargo.toml  README.md
crates/iscc-lib/benches/: benchmarks.rs
crates/iscc-lib/src/: cdc.rs  codec.rs  conformance.rs  dct.rs  lib.rs  minhash.rs  simhash.rs  streaming.rs  types.rs  utils.rs  wtahash.rs
crates/iscc-lib/tests/: data.json  test_algorithm_primitives.rs  test_text_utils.rs
crates/iscc-napi/: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  package.json
crates/iscc-napi/__tests__/: conformance.test.mjs  functions.test.mjs
crates/iscc-napi/src/: lib.rs
crates/iscc-py/: CLAUDE.md  Cargo.toml  README.md  pyproject.toml
crates/iscc-py/python/iscc/: __init__.py  _lowlevel.pyi
crates/iscc-py/python/iscc_lib/: __init__.py  _lowlevel.pyi
crates/iscc-py/src/: lib.rs
crates/iscc-rb/: .gitignore  .standard.yml  CLAUDE.md  Cargo.toml  Gemfile  LICENSE  README.md  Rakefile  extconf.rb  iscc-lib.gemspec
crates/iscc-rb/lib/: iscc_lib.rb
crates/iscc-rb/lib/iscc_lib/: version.rb
crates/iscc-rb/src/: lib.rs
crates/iscc-rb/test/: test_conformance.rb  test_helper.rb  test_iscc_lib.rb  test_smoke.rb
crates/iscc-uniffi/: Cargo.toml  uniffi-bindgen.rs
crates/iscc-uniffi/src/: lib.rs
crates/iscc-wasm/: CLAUDE.md  Cargo.toml  README.md
crates/iscc-wasm/src/: lib.rs
crates/iscc-wasm/tests/: conformance.rs  unit.rs
docs/: CNAME  api.md  architecture.md  benchmarks.md  c-ffi-api.md  development.md  ecosystem.md  index.md  java-api.md  llms.txt  ruby-api.md  rust-api.md
docs/howto/: c-cpp.md  dotnet.md  go.md  java.md  kotlin.md  nodejs.md  python.md  ruby.md  rust.md  swift.md  wasm.md
docs/includes/: abbreviations.md
docs/javascripts/: copypage.js
docs/stylesheets/: extra.css
docs/tutorials/: getting-started.md
notes/: 00-overview.md  01-workspace-structure.md  02-language-bindings.md  03-async-and-streaming.md  04-api-compatibility-safety.md  05-developer-tooling.md  06-build-cicd-publishing.md  07-security-versioning.md  08-references.md  09-performance-benchmarks.md
overrides/: main.html
scripts/: build_xcframework.sh  gen_llms_full.py  test_install.py  version_sync.py
tests/: test_algo.py  test_benchmarks.py  test_conformance.py  test_new_symbols.py  test_smoke.py  test_streaming.py  test_text_utils.py
tools/: cid.py
