[workspace]
resolver = "2"
members = [
  "crates/iscc-lib",
  "crates/iscc-py",
  "crates/iscc-napi",
  "crates/iscc-wasm",
  "crates/iscc-ffi",
  "crates/iscc-jni",
]

[workspace.package]
version = "0.0.3"
edition = "2024"
rust-version = "1.85"
authors = ["Titusz Pan <tp@py7.de>"]
license = "Apache-2.0"
repository = "https://github.com/iscc/iscc-lib"
homepage = "https://lib.iscc.codes"
description = "High-performance Rust implementation of ISO 24138:2024 (ISCC)"

[workspace.dependencies]
blake3 = "1"
data-encoding = "2"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_json_canonicalizer = "0.3.2"
thiserror = "2"
unicode-normalization = "0.1"
unicode-general-category = "1"
xxhash-rust = { version = "0.8", features = ["xxh32"] }
pyo3 = { version = "0.23", features = ["abi3-py310"] }
napi = { version = "3", default-features = false, features = ["napi6"] }
napi-derive = "3"
napi-build = "2"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
serde-wasm-bindgen = "0.6"
criterion = { version = "0.5", features = ["html_reports"] }
jni = "0.21"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
