[project]
name = "iscc-lib"
version = "0.4.0"
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120

[tool.ty.src]
# Exclude Conan recipe — conan is not a project dependency
exclude = ["packages/cpp/conanfile.py"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[dependency-groups]
dev = [
  "maturin",
  "prek",
  "ruff",
  "taplo",
  "yamlfix",
  "ty",
  "pytest",
  "pytest-benchmark",
  "pytest-cov",
  "pytest-timeout",
  "mdformat",
  "mdformat-mkdocs[recommended]",
  "iscc-core",
  "zensical",
  "mkdocstrings[python]",
]
