[package]
name = "iscc-jni"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "JNI bindings for iscc-lib (ISO 24138:2024 ISCC)"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
iscc-lib = { path = "../iscc-lib" }
jni = { workspace = true }
