[package]
name = "iscc-lib"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords = ["iscc", "content-id", "media", "fingerprint", "iso"]
categories = ["multimedia", "encoding", "cryptography"]

[dependencies]
blake3.workspace = true
data-encoding.workspace = true
hex.workspace = true
serde_json.workspace = true
thiserror.workspace = true
unicode-normalization.workspace = true
unicode-general-category.workspace = true
xxhash-rust.workspace = true

[dev-dependencies]
serde = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "benchmarks"
harness = false
