[package]
name = "iscc-lib"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
readme = "README.md"
keywords = ["iscc", "content-id", "media", "fingerprint", "iso"]
categories = ["multimedia", "encoding", "cryptography"]

[features]
default = ["meta-code"]
text-processing = ["dep:unicode-normalization", "dep:unicode-general-category"]
meta-code = ["text-processing", "dep:serde_json_canonicalizer"]

[dependencies]
blake3.workspace = true
data-encoding.workspace = true
hex.workspace = true
serde_json.workspace = true
serde_json_canonicalizer = { workspace = true, optional = true }
thiserror.workspace = true
unicode-normalization = { workspace = true, optional = true }
unicode-general-category = { workspace = true, optional = true }
xxhash-rust.workspace = true

[dev-dependencies]
serde = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "benchmarks"
harness = false
