[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "iscc-lib"
description = "High-performance Python bindings for ISO 24138:2024 (ISCC)"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Titusz Pan", email = "tp@py7.de" }]
keywords = ["iscc", "content-id", "media", "fingerprint", "iso24138"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Multimedia",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://lib.iscc.codes"
Repository = "https://github.com/iscc/iscc-lib"
Documentation = "https://lib.iscc.codes"
Issues = "https://github.com/iscc/iscc-lib/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "iscc_lib._lowlevel"
