[package]
name = "iscc-uniffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "UniFFI scaffolding for iscc-lib (Swift and Kotlin bindings)"
publish = false

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[features]
bindgen = ["uniffi/cli"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["bindgen"]

[dependencies]
iscc-lib = { path = "../iscc-lib", features = ["meta-code"] }
uniffi = { workspace = true }
thiserror = { workspace = true }
